Improved error handling, replacing generic java.lang.Exception with ProbCogException